--- a/src/sass/base/_basic.scss
+++ b/src/sass/base/_basic.scss
@@ -1,6 +1,7 @@
 *, *::after, *::before {
   box-sizing: border-box;
 }
+
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
@@ -12,13 +13,14 @@ body {
   margin: 0 auto;
   padding: 0 15px;
 }
+
 input[type="text"], input[type="email"], input[type="submit"] {
   border: none;
   list-style: none;
 }
 
 img:hover {
-  background-color:#b3d9ff;
+  background-color: #b3d9ff;
 }
 
 .icon-point {
@@ -27,7 +29,12 @@ img:hover {
   justify-content: center;
   margin: 4% auto;
 }
+
 a {
   text-decoration: none;
   cursor: pointer;
+}
+
+li {
+  border: none;
 }
