--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -7,9 +7,7 @@
 }
 
 .print, .web, .app, .logo-de {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex-style(flex, center, center)
   background-repeat: no-repeat;
   background-position: center;
   border: 1px solid #b5b5b5;
@@ -38,7 +36,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
   text-align: center;
   font-weight: 400;
   color: #3b434c;
@@ -69,11 +66,9 @@
 }
 
 .our-services-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  width: 19%;
+  @include flex-style(flex, space-between, center)
+   flex-direction: column;
+   width: 19%;
 }
 
 /*--design new--*/
@@ -91,10 +86,8 @@
 }
 
 .block3-email {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 25px 0;
+  @include flex-style(flex, center, center)
+   padding: 25px 0;
 }
 
 .button-email {
